--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,14 @@
 .shadow-bets {
   box-shadow: 0px 2px 0px 0px #3ecefe, 0px 4px 0px 0px rgba(0, 0, 0, 0.15);
 }
+.bg-button {
+  width: 100%;
+  height: 100%;
+  background-image: url('./assets/png/bgButton.png');
+  background-position: center;
+  filter: blur(10px);
+  position: absolute;
+  z-index: 40;
+  top: 0;
+  left: 0;
+}
