fix: анимация звезд

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@ html {
 }
 
 .stars {
-  background-image: url('./assets/png/starts.png');
-  animation: scroll linear 30s infinite;
+  background: url('./assets/png/starts.png') repeat;
+  animation: scrollStars linear 30s infinite;
 }
 
 .air-animate {
@@ -62,6 +62,15 @@ html {
   }
   100% {
     transform: translate(0, 0) rotate(0);
+  }
+}
+
+@keyframes scrollStars {
+  from {
+    background-position: 100vw 0;
+  }
+  to {
+    background-position: -100vw 0;
   }
 }
 
